# university

algorithms/approximate(12)/: CMakeLists.txt  input.txt  main.cpp  output.txt
algorithms/binary_tree(20)/: CMakeLists.txt  in.txt  main.cpp  out.txt
algorithms/binary_tree(34)/: CMakeLists.txt  main.cpp  tst.out
algorithms/brute(33)/: CMakeLists.txt  input.txt  main.cpp  test
algorithms/brute_for_binary_tree/: CMakeLists.txt  main.cpp  output.txt
algorithms/data_structures(41)/: CMakeLists.txt  main.cpp
algorithms/data_structures(48)/: CMakeLists.txt  main.cpp
algorithms/dp(61)/: CMakeLists.txt  input.txt  main.cpp
algorithms/dp(65)/: CMakeLists.txt  jokers.in  main.cpp
algorithms/graphs(50)/: CMakeLists.txt  main.cpp
algorithms/graphs(60)/: CMakeLists.txt  main.cpp
computer architecture/lab3/: CMakeLists.txt  input.txt  main.cpp
computer architecture/lab4/: CMakeLists.txt  main.cpp
computer architecture/lab4/Отчет_Сараев/: main.cpp  measures.txt  result1.csv  result2.csv
educational practice/2 semester/WinAPI_1/: WinAPI_1.sln
educational practice/2 semester/WinAPI_2/: WinAPI_2.sln
educational practice/2 semester/assembler_1/: assembler_1.sln
educational practice/2 semester/assembler_2/: assembler_2.sln
educational practice/2 semester/assembler_str/: assembler_str.sln
educational practice/4 semester/gui(week3)/: input.xml
educational practice/4 semester/gui(week4)/: input.json
educational practice/4 semester/html(week8)/: card.html  (+3 more)
os/DLL_Lab1/: DLL_Lab1.sln
os/DLL_Lab2/: DLL_Lab2.sln
os/KR/: KR.sln
test/: main.cpp
(+887 files in other folders)
